# patina

./: LICENSE  README.md  pyproject.toml
patina/: __init__.py  __main__.py  config.py
patina/agent/: __init__.py  core.py
patina/consolidation/: __init__.py  consolidator.py  daily.py  decay.py  monthly.py  weekly.py
patina/database/: __init__.py  connection.py  models.py
patina/llm/: __init__.py  prompts.py  router.py  tools.py
patina/memory/: __init__.py  episodic.py  manager.py  retrieval.py  semantic.py  working.py
patina/scheduling/: __init__.py  jobs.py
tests/: test_patina.py
